--- a/src/main/resources/templates/thymeleaf/band/bandFeedUpdate.html
+++ b/src/main/resources/templates/thymeleaf/band/bandFeedUpdate.html
@@ -16,19 +16,27 @@
 <body>
     <div class="bandFeedWrite_wrapper">
         <div class="bandFeedWrite_form">
-            <form method="post" action="updateFeed">				
-            	<input name="member_id" type="hidden" th:value="${member_id}"/>
+			<form method="post" action="updateFeed" onsubmit="return func_updateBandFeed()">				
+            	<input id="bandWriter_id" name="member_id" type="hidden" th:value="${session.Member_Id}"/>
             	<input name="bandUrl" type="hidden" th:value="${bandUrl}"  />
-            	<input name="bandfeednum" type="hidden" th:value="${bandfeednum}"  />
-            	
                 <textarea id="summernote" name="band_feed_content" ></textarea>
-                <input type="submit" name="doit" value="글쓰기" />
+                <input type="submit" name="doit" value="수정하기" onclick=""/>
                	<input type="button" value="취소" onclick="history.back()" />
             </form>
         </div>
     </div>
     
 <script th:inline="javascript">
+/* 로그인을 하지 않았을 때  */
+function func_updateBandFeed() {
+   
+   var bandWriter_id = $('#bandWriter_id').val();
+   if(bandWriter_id.length == 0){
+	   alert('로그인시 이용가능합니다.');
+	   location.href = '/login';
+	   return false;
+   }
+}
 $(document).ready(function() {
     
     
