--- a/src/main/resources/static/css/band.css
+++ b/src/main/resources/static/css/band.css
@@ -116,10 +116,14 @@ div.join_band_item_text>span>span{
 }
 
 /* 밴드 추천 창 */
+
 div.band_recomand_wrapper{
     width: 100%;
     padding: 40px 0px;
     background-color: #f3f2f2;
+}
+a.band_recomand_link{
+	display : block;
 }
 div.band_recomand_item{
     margin-top : 15px;
@@ -128,22 +132,27 @@ div.band_recomand_item{
     padding-left : 0px;
     height: 100px;;
     display: flex;
+    border : 1px solid red;
 }
 /* 밴드 추천 창 - 이미지*/
 div.band_recomand_img{
     width: 120px;
     height: 100px;
     margin-right: 10px;
-    
+    position : relative;
+    display : inline-block;
 }
 div.band_recomand_img>img{
     width: 100%;
     height: 100%;
     background-size: 100%;
     border-radius: 20px;
+    border : 1px solid blue;
 }
 div.band_recomand_text{
+	position : relative;
     width: 70%;
+    border : 1px solid black;
 }
 div.band_recomand_text>h3{
     font-size: 18px;
