--- a/src/main/resources/templates/thymeleaf/info/Event_view.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_view.html
@@ -37,9 +37,9 @@
 		</div>
 		<div class="row px-xl-5 justify-content-center">
 			<div class="col px-xl-5 my-5">
-				<h4 class="mt-5 mb-3">상세 정보</h4>
+				<h4 class="mt-2 mt-lg-5 mb-3 px-lg-3">상세 정보</h4>
 				<hr>
-				<p class="px-lg-5 textcontent" th:text="${view.getEvent_content()}">내용
+				<p class="px-lg-5 textcontent px-3" th:text="${view.getEvent_content()}">내용
 					들어가는 곳</p>
 
 
@@ -48,7 +48,7 @@
 					<div id="map" style="width: 500px; height: 300px"
 						class=" mx-auto rounded-4"></div>
 				</div>
-				<div class="row d-flex my-4 justify-content-center">
+				<div class="row d-flex my-4 justify-content-sm-center">
 					<div class="col-3 col-lg-2">
 						<ul>
 							<li>안내</li>
@@ -104,11 +104,11 @@
 			</div>
 		</div>
 		<div class="row"  >
-			<div class="col-8 p-3 mx-auto">
+			<div class="col-10 col-md-8 p-3 mx-auto">
 				<b>여행 포스트잇 <span th:text="${commentCount}"></span> 개</b>
 				<form action="Event_comment" method="post">
 				<div class="">
-					<textarea class="form-control my-3" id="" cols="30" rows="10" name="Eventcomment_content"></textarea>
+					<textarea class="form-control my-3" id="" cols="30" rows="5" name="Eventcomment_content"></textarea>
 					<input type="hidden" name="Event_num" th:value="${view.getEvent_num()}"/>
 					<input type="hidden" name="memberId" th:value="${session.Member_Id}"/>
 					
@@ -135,6 +135,7 @@
 					</th:block>
 					</div>
 					</div>
+			</div>
 					<div class="text-end mt-3">
 						<th:block th:if="${session.Member_Id=='admin'}">
 						<a th:href="@{'Event_write_update?num='+${view.getEvent_num()}}" class="btn btn-pink"> 수정하기</a>
@@ -144,7 +145,6 @@
 						
 						
 					</div>
-			</div>
 		</div>
 		
 	</div>
