--- a/src/main/resources/templates/thymeleaf/info/info.html
+++ b/src/main/resources/templates/thymeleaf/info/info.html
@@ -3,6 +3,7 @@
 <div th:replace="~{head/head::head}"></div>
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
+	<div th:replace="~{alert/toast::div}"></div>
 	<div id="info" class="container-fluid mt-4 mb-3">
 		<div class="container px-4 px-sm-5 pt-4">
 			<div class="row">
@@ -153,7 +154,7 @@
 				<div
 					class="col-12 col-lg-5 order-1 order-lg-2 bg-light mt-3 p-2 ms-md-2 order-1 rounded-4">
 					<!-- 새로고침 버튼 -->
-					<a href="#" class="btn-refresh ms-auto mt-2 me-2"></a>
+					<!-- <a href="#" class="btn-refresh ms-auto mt-2 me-2"></a> -->
 					<div class="row">
 						<div class="col">
 							<hr>
@@ -166,7 +167,7 @@
 							</a>
 
 						</div>
-						<div class="col-11 m-auto">
+						<div class="col-12 ">
 							<hr>
 						</div>
 						<div class="col-12">
@@ -174,8 +175,8 @@
 								전체 태그</a>
 							<button type="button" class="btn rounded-pill px-3 btn-light f14"
 								th:each="tag : ${tags}">
-								<a th:href="@{'Event_tags?tagss='+${tag}}"># <span
-									th:text="${tag}"></span></a>
+								<a th:href="@{'Event_tags?tagss='+${tag}}"
+									th:if="${tag != null}"># <span th:text="${tag}"></span></a>
 							</button>
 						</div>
 					</div>
@@ -191,6 +192,25 @@
 	</div>
 
 	<div th:replace="~{footer/footer::footer}"></div>
-
+	<script type="text/javascript">
+        $(document).ready(function() {
+            // URL에서 msg 매개변수 가져오기
+            const urlParams = new URLSearchParams(window.location.search);
+            const msg = urlParams.get('msg');
+            const name = urlParams.get('name');
+            
+         // 메시지가 존재할 경우 toast로 표시
+            if (msg !== null && msg !== "") {
+                let message;
+                if(msg == 1){
+                    message = "글작성을 완료하였습니다. 🖐";
+                }
+                
+                // 부트스트랩 toast 트리거
+                $('.my-toast-body').text(message);
+                $('.my-toast').toast('show');
+            }
+        });
+    </script>
 </body>
 </html>
