--- a/src/main/resources/templates/thymeleaf/info/Event_view.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_view.html
@@ -10,14 +10,14 @@
 			event.stopProgation();
 		event.preventDefault();
 	}
-	function deleteComment(num,id) {
+	function deleteComment(num, id) {
 		if (confirm("해당 댓글을 정말 삭제하시겠습니까?") == true)
-			 location.href = "/EventCommentUpdateDelete?num=" + num + "&id=" + id;
+			location.href = "/EventCommentUpdateDelete?num=" + num + "&id="
+					+ id;
 		else
 			event.stopProgation();
 		event.preventDefault();
 	}
-	
 </script>
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
@@ -39,8 +39,8 @@
 			<div class="col px-xl-5 my-5">
 				<h4 class="mt-2 mt-lg-5 mb-3 px-lg-3">상세 정보</h4>
 				<hr>
-				<p class="px-lg-5 textcontent px-3" th:text="${view.getEvent_content()}">내용
-					들어가는 곳</p>
+				<p class="px-lg-5 textcontent px-3"
+					th:text="${view.getEvent_content()}">내용 들어가는 곳</p>
 
 
 				<div class="map_mapSection w-100 my-5 ">
@@ -82,14 +82,30 @@
 				</div>
 				<div class="row mb-5 px-md-5 justify-content-center">
 					<div class="col-12 col-lg-8 ">
-						<button class="btn btn-mainbg"># <span th:text="${view.getEvent_tag()}"></span></button>
-						<button class="btn btn-pink" ># <span th:text="${view.getEvent_tag2()}"></span></button>
-						<button class="btn btn-pink" ># <span th:text="${view.getEvent_tag3()}"></span></button>
-						<button class="btn btn-pink" ># <span th:text="${view.getEvent_tag4()}"></span></button>
-						<button class="btn btn-pink" ># <span th:text="${view.getEvent_tag5()}"></span></button>
-						<button class="btn btn-pink" ># <span th:text="${view.getEvent_area()}"></span></button>
-						<button class="btn btn-pink" ># <span th:text="${view.getEvent_area2()}"></span></button>
-						<button class="btn btn-pink" ># <span th:text="${view.getEvent_parking()}"></span></button>
+						<button class="btn btn-mainbg">
+							# <span th:text="${view.getEvent_tag()}"></span>
+						</button>
+						<button class="btn btn-pink">
+							# <span th:text="${view.getEvent_tag2()}"></span>
+						</button>
+						<button class="btn btn-pink">
+							# <span th:text="${view.getEvent_tag3()}"></span>
+						</button>
+						<button class="btn btn-pink">
+							# <span th:text="${view.getEvent_tag4()}"></span>
+						</button>
+						<button class="btn btn-pink">
+							# <span th:text="${view.getEvent_tag5()}"></span>
+						</button>
+						<button class="btn btn-pink">
+							# <span th:text="${view.getEvent_area()}"></span>
+						</button>
+						<button class="btn btn-pink">
+							# <span th:text="${view.getEvent_area2()}"></span>
+						</button>
+						<button class="btn btn-pink">
+							# <span th:text="${view.getEvent_parking()}"></span>
+						</button>
 
 					</div>
 				</div>
@@ -103,57 +119,81 @@
 				<button class="btn btn-light">별로에요버튼</button>
 			</div>
 		</div>
-		<div class="row"  >
+		<div class="row">
 			<div class="col-10 col-md-8 p-3 mx-auto">
-				<b>여행 포스트잇 <span th:text="${commentCount}"></span> 개</b>
+				<b>여행 포스트잇 <span th:text="${commentCount}"></span> 개
+				</b>
 				<form action="Event_comment" method="post">
-				<div class="">
-					<textarea class="form-control my-3" id="" cols="30" rows="5" name="Eventcomment_content"></textarea>
-					<input type="hidden" name="Event_num" th:value="${view.getEvent_num()}"/>
-					<input type="hidden" name="memberId" th:value="${session.Member_Id}"/>
-					
-				</div>
-				<div class="col text-end mt-2">
-						<button class="btn btn-mainbg mb-3">한줄 남기기</button>
+					<div class="">
+						<textarea class="form-control my-3" id="" cols="30" rows="5"
+							name="Eventcomment_content"></textarea>
+						<input type="hidden" name="Event_num"
+							th:value="${view.getEvent_num()}" /> <input type="hidden"
+							name="memberId" th:value="${session.Member_Id}" />
+
 					</div>
-					</form>
-					<div th:each="commentlist:${commentlist}" class="rounded-4 border row my-2 ">
-					<div class="d-none d-lg-block col-2 px-2 pt-3 border-end text-center">
-						<img class="d-none d-lg-block mx-auto rounded-circle" th:src="@{'../img/member_thumbnail/'+${commentlist.getMember_profileimage()}}" style="width:80px;"height="80px;"/>
-						<p th:text="${commentlist.getMember_Id()}" class="btn btn-light my-2 d-none d-md-block"></p>
+					<div class="col text-end mt-2">
+						<a href="login"class="btn btn-mainbg mb-3"
+							th:if="${session.Member_Id == null }"
+							onclick="alert('로그인해주세요');"
+							>한 줄 남기기</a>
+						<button class="btn btn-mainbg mb-3"
+							th:if="${session.Member_Id !=null }">한줄 남기기</button>
+					</div>
+				</form>
+				<div th:each="commentlist:${commentlist}"
+					class="rounded-4 border row my-2 ">
+					<div
+						class="d-none d-lg-block col-2 px-2 pt-3 border-end text-center">
+						<img class="d-none d-lg-block mx-auto rounded-circle"
+							th:src="@{'../img/member_thumbnail/'+${commentlist.getMember_profileimage()}}"
+							style="width: 80px;" height="80px;" />
+						<p th:text="${commentlist.getMember_Id()}"
+							class="btn btn-light my-2 d-none d-md-block"></p>
 					</div>
 					<div class="col px-4">
-					<img class="d-lg-none rounded-circle" th:src="@{'../img/member_thumbnail/'+${commentlist.getMember_profileimage()}}" style="width:30px;"height="30px;"/>
-						<p th:text="${commentlist.getMember_Id()}" class="btn my-2 d-lg-none"></p>
-					<p class="mt-lg-5" th:text="${commentlist.getEventcomment_content()}"></p>
-					<p th:text="${commentlist.getEventcomment_update()}"></p>
+						<img class="d-lg-none rounded-circle"
+							th:src="@{'../img/member_thumbnail/'+${commentlist.getMember_profileimage()}}"
+							style="width: 30px;" height="30px;" />
+						<p th:text="${commentlist.getMember_Id()}"
+							class="btn my-2 d-lg-none"></p>
+						<p class="mt-lg-5"
+							th:text="${commentlist.getEventcomment_content()}"></p>
+						<p th:text="${commentlist.getEventcomment_update()}"></p>
 					</div>
 					<div class="col-3 col-block-2 mt-5 text-end">
-					<th:block th:if="${session.Member_Id==commentlist.getMember_Id()||session.Member_Id=='admin'}">
-					<a th:href="@{'Event_comment_update?num='+${commentlist.getEventcomment_num()}+'&id='+${commentlist.getEvent_num()}}" class="btn btn-skyb">수정</a>
-					<a href="#" class="btn btn-pink" th:onclick="'deleteComment(\'' + ${commentlist.getEventcomment_num()} + '\', \'' + ${commentlist.getEvent_num()} + '\')'">삭제</a>
-					</th:block>
-					</div>
-					</div>
-			</div>
-					<div class="text-end mt-3">
-						<th:block th:if="${session.Member_Id=='admin'}">
-						<a th:href="@{'Event_write_update?num='+${view.getEvent_num()}}" class="btn btn-pink"> 수정하기</a>
-						
-						<a href="#" class="btn btn-skyb" th:onclick="'deleteConfirm(\'' + ${view.getEvent_num()} + '\')'">글 삭제</a>
+						<th:block
+							th:if="${session.Member_Id==commentlist.getMember_Id()||session.Member_Id=='admin'}">
+							<a
+								th:href="@{'Event_comment_update?num='+${commentlist.getEventcomment_num()}+'&id='+${commentlist.getEvent_num()}}"
+								class="btn btn-skyb">수정</a>
+							<a href="#" class="btn btn-pink"
+								th:onclick="'deleteComment(\'' + ${commentlist.getEventcomment_num()} + '\', \'' + ${commentlist.getEvent_num()} + '\')'">삭제</a>
 						</th:block>
-						
-						
 					</div>
+				</div>
+			</div>
+			<div class="text-end mt-3">
+				<th:block th:if="${session.Member_Id=='admin'}">
+					<a th:href="@{'Event_write_update?num='+${view.getEvent_num()}}"
+						class="btn btn-pink"> 수정하기</a>
+
+					<a href="#" class="btn btn-skyb"
+						th:onclick="'deleteConfirm(\'' + ${view.getEvent_num()} + '\')'">글
+						삭제</a>
+				</th:block>
+
+
+			</div>
 		</div>
-		
+
 	</div>
 	<div th:replace="~{footer/footer::footer}"></div>
 
-	
-		
-		
-		<!-- 카카오 지도 API 활용 스크립트 -->
+
+
+
+	<!-- 카카오 지도 API 활용 스크립트 -->
 	<script th:inline="javascript">
 		var mapContainer = document.getElementById('map'); // 지도를 표시할 div 
 		var mapContainer = document.getElementById('map'); // 맵을 표시할 div
@@ -191,6 +231,7 @@
 				var content = eventContent.innerHTML; // 요소의 HTML 내용 가져오기
 				var replacedContent = content.replace(/(\d+)\.|(?<!\d)\./g,
 						function(match, p1) {
+
 							if (p1) {
 								if (p1) {
 									return p1 + '.';
@@ -205,6 +246,6 @@
 			}
 		});
 	</script>
-	
+
 </body>
 </html>
