--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -84,7 +84,7 @@
 							height="50" alt="">
 						<!--feed box text-->
 						<div class="col px-0">
-							<span class="float-start fw-bold f15">박검지</span><br>
+							<span class="float-start fw-bold f15" th:text="">박검지</span><br>
 							<span class="float-start text-muted f13">하이라이트</span>
 							<span class="float-start text-muted f13 ms-3 ">2시간 전</span>
 						</div>
