--- a/src/main/resources/templates/thymeleaf/band/myBand.html
+++ b/src/main/resources/templates/thymeleaf/band/myBand.html
@@ -37,7 +37,9 @@
 						<div class="myBand_info">
 							<span th:text="${myBandList.getBand_content()}"></span>
 						</div>
-						<button type="button" data-bs-toggle="modal" data-bs-target="#myModal">Launch modal</button>
+						
+						
+						
 						<!-- 가입한 밴드 확인 영역 -->
 						<th:block th:if="${checkMember == null}">
 							<form action="addBandMember" method="post" name="addMember_band">
@@ -57,29 +59,17 @@
 									<span>글쓰기</span>
 								</a>
 							</div>
-							<div class="modal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Modal body text goes here.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+						
 						</th:block>
 						<!-- 로그인 아이디와 밴드 관리자 아이디가 같을 때 -->
-						<th:block th:if="${ session.Member_Id eq myBandList.getBand_admin() }">
-							<a th:href="@{'setMyBand?bandUrl='+${myBandList.getBand_code()}}" class="btn btn-success">밴드 설정</a>
+						<th:block th:if="${session.Member_Id ne null}">
+							<th:block th:if="${ session.Member_Id eq myBandList.getBand_admin() }">
+								<a th:href="@{'setMyBand?bandUrl='+${myBandList.getBand_code()}}" class="btn btn-success">밴드 설정</a>
+							</th:block>
+							<th:block th:unless="${ session.Member_Id eq myBandList.getBand_admin() and  checkMember ne null}">
+								<a th:href="@{'withdrawalMyBand?bandUrl='+${myBandList.getBand_code()}}" class="btn btn-success" onclick="return func_bandWithdrawal() ">밴드 탈퇴하기</a>
+							</th:block>
 						</th:block>
-						
 					</div> <!-- myBand_content_col_title -->
 				</div> <!-- myBand_content_col_titleBox -->
 
@@ -138,12 +128,6 @@
 	
     
     <script>
-    const myModal = document.getElementById('myModal');
-    const myInput = document.getElementById('myInput');
-
-    myModal.addEventListener('shown.bs.modal', () => {
-      myInput.focus()
-    });
 
 	    function func_deleteFeed(){
 	        var del_confirm = confirm("게시글을 정말 삭제하시겠습니까?");
@@ -156,6 +140,16 @@
 	            // 취소를 클릭한 경우 아무 작업도 하지 않습니다.
 	            return false; // 페이지 이동 방지
 	        }
+	    }
+	    
+	    function func_bandWithdrawal(){
+	    	var result = confirm('정말 탈퇴하시겠습니까?');
+	    	
+	    	if(result){
+	    		return true;
+	    	} else {
+	    		return false;
+	    	}
 	    }
 	    
 	</script>
