--- a/src/main/resources/templates/thymeleaf/feed/feed_show.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_show.html
@@ -1,139 +1,170 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
+
 <div th:replace="~{head/head::head}"></div>
+
 <body>
-<h1>NAAAAAAAAAAAAAAAAAAAAAAAANNNNAAAVVV</h1>
+	<div th:replace="~{nav/nav::nav}"></div>
+	<div id="feed" class="container-fluid mt-4 mb-5">
+		<form action="/feed_write_action" method="post">
+		<div class=" px-2 pt-3">
+			<!--filtering-->
+			<div class="row px-0 hstack">
+				<div class="feed-filter col-8">
+					<div class="" id="list-tab" role="tablist">
+						<a class="btn rounded-pill px-3 active" id="feed-all-tag" data-bs-toggle="list" href="#feed-all" role="tab" aria-controls="feed-all">
+							전체
+						</a>
+						<a class="btn rounded-pill px-3" id="feed-theme-tag" data-bs-toggle="list" href="#feed-theme" role="tab" aria-controls="feed-theme">
+							테마여행 🌴
+						</a>
+						<a class="btn rounded-pill px-3" id="feed-area-tag" data-bs-toggle="list" href="#feed-area" role="tab" aria-controls="feed-area">
+							지역 🗺️
+						</a>
+					</div>
+				</div>
+				<!--상단 우측 드롭다운-->
+				<div class="col d-flex justify-content-end align-items-center">
+					<button class="btn btn-light rounded-pill dropdown-toggle px-3" type="button"
+						data-bs-toggle="dropdown" aria-expanded="false">
+						정렬
+					</button>
+					<ul class="dropdown-menu">
+						<li><a class="dropdown-item" href="#">추천</a></li>
+						<li><a class="dropdown-item" href="#">팔로잉</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<div class="container feed-filter position-absolute px-3 ms-sm-2">
+			<div class="row">
+				<div class="col-10 col-md-12">
+					<div class="tab-content" id="nav-tabContent">
+					<!--테마 측 해시태그-->
+						<div class="tab-pane fade" id="feed-theme" role="tabpanel" aria-labelledby="feed-theme-tag">
+							<button type="button" class="btn btn-sm rounded-pill btn-dark me-1 mb-2 px-2">#전체</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#빅데이터 맛집</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#축제</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#공연</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#댕댕이랑</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#아이와함께</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#데이트</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#소개팅</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#친구와</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#효도여행</button>
+						</div>
+						<!--지역 측 해시태그-->
+						<div class="tab-pane fade" id="feed-area" role="tabpanel" aria-labelledby="feed-area-tag">
+							<button type="button" class="btn btn-sm rounded-pill btn-dark me-1 mb-2 px-2">#전체</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#강원</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#서울</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#경기</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#인천</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#층북</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#충남</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#세종</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#대전</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#경북</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#전북</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#대구</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#광주</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#경남</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#울산</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#부산</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#제주</button>
+							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#울릉</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- 글쓰기 버튼 -->
+		<div
+			class=" sticky-top feed-write-btn ms-auto rounded-circle d-flex">
+			<a href="/feed_write" class="m-auto text-center">
+			<img src="../img/feed/edit.png" alt="" class="m-auto text-center"
+				width="21" height="21" /></a>
+		</div>
+		<!--------------------------------------------feed box Parent------------------------------------------>
+		<div class="m-auto mt-5 pt-5 pt-md-0">
+			<div class="card-columns justify-content-center align-items-start mt-3 m-0 row-box">
+				<!--feed box Start-->
+				<div class="col feed-box m-0 mb-3 px-0 no-gutters" th:each="feed : ${feedList}">
+					<!--feed box top-->
+					<div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
+						<img src="../img/feed/user_rabbit.jpg" class="float-start rounded-circle border me-3" width="50"
+							height="50" alt="">
+						<!--feed box text-->
+						<div class="col px-0">
+							<span class="float-start fw-bold f15" th:text="${feed.Member_Id}">박검지</span><br>
+							<span class="float-start text-muted f13">하이라이트</span>
+							<span class="float-start text-muted f13 ms-3">2시간 전</span>
+						</div>
+						<!-- 우측 버튼 -->
+						<div class="col-4 d-flex justify-content-end align-items-center pe-2">
+							<button type="button" class="btn btn-sm btn-dark">전체</button>
+							<span class="mx-2 f17">⋮</span>
+						</div>
+					</div>
 
-<section id="feed-show" class="container-fluid p-0">
-<div th:replace="~{nav/nav::nav}"></div>
-    <div class="container mt-5">
-        <div class="row">
-            <!--feed top-->
-            <div class="col-12 feed-show-top justify-content-between order-1">
-                <h2 class="fw-bold">제목</h2>
-                <div class="row">
-                    <div class="col feed-user py-2 py-lg-5 f15 d-flex align-items-center">
-                        <img src="../img/feed/user_rabbit.jpg" class="rounded-circle" width="24" alt="">
-                        <div class="gg-dim-txt">
-                            <span class="ms-1">검데렐라</span>
-                            <span class="ms-2">2024.02.07</span>
-                        </div>
-                    </div>
-                    <div class="col-4 d-flex justify-content-end align-items-center pe-2">
-                        <button type="button" class="btn btn-sm btn-dark">팔로우</button>
-                    </div>
-                </div>
-            </div>
-            <!--썸네일-->
-            <div class="col-12 order-0 order-md-1 p-0 px-md-5">
-                <!--썸네일-->
-                <div class="mt-md-5 mb-4 mx-auto px-md-5">
-                    <img src="../img/feed/cebu.jpg" class="img-fluid rounded-3" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--구분선 띠-->
-    <div class="d-md-none container-fluid px-0 py-2 my-4 bg-light">
-    </div>
-    <div class="container mb-5">
-        <!--feed 내용-->
-        <div class="col-12 mt-5 order-1">
-            <!--DATE-->
-            <div class="feed-show-date">
-                <p class="fw-bold">여행 일자</p>
-                <div class="align-items-center">
-                    <span class="me-1 gg-dark-txt"><i class="fa-regular fa-calendar"></i></span>
-                    <span class="gg-dark-txt">2024.02.07</span>
-                </div>
-            </div>
-            <hr class="my-5">
-            <!--CONTENT-->
-            <div class="feed-show-content">
-                <p class="fw-bold">여행 기록</p>
-                <p class="gg-dark-txt">룰룰루루.. 신나는 여행...........................</p>
-            </div>
-            <hr class="my-5">
-            <!--피드 하단-->
-            <div class="feed-show-bot p-4 text-center">
-                <div class="gg-dim-txt pb-5 f13 fw-bold">
-                    ©<span>검데렐라</span>
-                </div>
-                <button type="button" class="btn btn-sm btn-outline-dark rounded-pill p-2 px-3">
-                    <i class="fa-regular fa-heart me-1"></i>좋아요
-                </button>
-                <div class="gg-dim-txt p-5 f13">
-                    <span>이 포스트를 사랑하는 사람들 ></span>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-    <!-- 글쓴이 정보 -->
-    <div class="feed-show-writer-bg py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col feed-user pb-4 f15 d-flex align-items-center">
-                    <img src="../img/feed/user_rabbit.jpg" class="rounded-circle" width="64" alt="">
-                    <div class="p-3">
-                        <p class="p-0 m-0 fw-bold f20 mb-1">검데렐라</p>
-                        <div class="gg-dim-txt f11">
-                            <span>팔로워</span>
-                            <span class="fw-bold">4594</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 d-flex justify-content-end align-items-center pe-2">
-                    <button type="button" class="btn btn-sm btn-dark">팔로우</button>
-                </div>
-                <div class="col-12">
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="feed-writer-info-img rounded mb-2">
-                                <img src="../img/feed/beer.jpg" class="img-fluid" alt="">
-                            </div>
-                            <span class="f12 d-block gg-dim-txt">이전피드</span>
-                            <span class="f14 fw-bold">뭔가 집에 가고 싶다</span>
-                        </div>
-                        <div class="col-6 text-end">
-                            <div class="feed-writer-info-img rounded mb-2">
-                                <img src="../img/feed/beer.jpg" class="img-fluid" alt="">
-                            </div>
-                            <span class="f12 d-block gg-dim-txt">다음피드</span>
-                            <span class="f14 fw-bold">뭔가 집에 가고 싶다</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div><!---->
-    <!--댓글-->
-    <div class="container p-3">
-        <!--댓글 입력란-->
-        <div class="row mx-auto d-flex justify-content-between align-items-center">
-            <div class="col flex-grow-0 p-0 text-center">
-                <img src="../img/feed/user_rabbit.jpg" class="rounded-circle" width="52" alt="">
-            </div>
-            <!--todo 팀장님 등록 버튼이 지금처럼 보여야하고, col 했을 때 모바일 틀어지는 부분 수정 요청 드립니다-->
-            <div class="col-2 col-md-1 order-1 flex-grow-0 p-0 text-center">
-                <button type="button" class="btn btn-secondary f13 py-3">등록</button>
-            </div>
-            <div class="col p-0 mx-2">
-                <span class="f11 feed-comment-title">
-                    댓글
-                </span>
-                <input type="text" class="form-control p-2 pt-4 f14" placeholder="내용 입력">
-            </div>
-        </div>
-        <hr>
-        <!--댓글 뷰-->
-        <div class="col-12 mb-5">
-            <span class="fw-bold">댓글</span><span class="ms-1 text-warning">0</span>
-        </div>
-    </div>
-</section>
-
-
-<div th:replace="~{footer/footer::footer}"></div>
+					<!-- feed box center | Carousel image -->
+					<div class="col-12 feed-box-center mt-3 d-flex align-items-center overflow-hidden">
+						<div th:id="'feedCarousel'+${feed.Feed_num}"
+							class="carousel slide" data-bs-ride="false">
+							<!-- carousel items loop -->
+							<div class="carousel-inner">
+								<div
+									th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feed.Feed_thumbnail, ',')}"
+									class="carousel-item p-0"
+									th:classappend="${thumbnailStat.index == 0} ? 'active' : ''">
+									<img th:src="@{'../img/feed_thumbnail/' + ${thumbnail}}"
+										class="d-block w-100 center-block" alt="#">
+								</div>
+							</div>
+							<!-- Carousel indicators -->
+							<div th:if="${#lists.size(#strings.arraySplit(feed.Feed_thumbnail, ',')) > 1}">
+								<button class="carousel-control-prev" type="button"
+									th:attr="data-bs-target='#feedCarousel'+${feed.Feed_num}"
+									data-bs-slide="prev">
+									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									<span class="visually-hidden">Previous</span>
+								</button>
+								<button class="carousel-control-next" type="button"
+									th:attr="data-bs-target='#feedCarousel'+${feed.Feed_num}"
+									data-bs-slide="next">
+									<span class="carousel-control-next-icon" aria-hidden="true"></span>
+									<span class="visually-hidden">Next</span>
+								</button>
+							</div>
+						</div>
+					</div>
+					
+					<!--feed-box-bot | text-->
+					<div class="col-12 feed-box-bot p-3">
+						<span class="fw-bold mb-1" th:text="${feed.Feed_title}">맥주 맛집🍺✨</span>
+						<span class="f13" th:text="${feed.Feed_content}">
+							맥주는 왜 먹어도 먹어도 맛있을까요?
+						</span>
+					</div>
+					<!--feed box bot | text-->
+					<div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
+						<div class="col-6 hstack justify-content-center border-end">
+							<span>담기</span>
+						</div>
+						<div class="col-6 hstack justify-content-center">
+							<i class="bi bi-heart"></i>
+							<span>좋아요</span>
+							<span class="ms-2">9999+</span>
+						</div>
+					</div>
+				</div>
+			</div><!--row-->
+			<!---------------------------------------------------------------------------->
+		</div><!--container-->
+		</form>
+	</div>
+	<div th:replace="~{footer/footer::footer}"></div>
 </body>
+
 </html>
