--- a/src/main/resources/templates/thymeleaf/band/band_update.html
+++ b/src/main/resources/templates/thymeleaf/band/band_update.html
@@ -10,7 +10,7 @@
                 <div class="row my-5">
                     <div class="col-md-8 col-lg-7 col-xl-7 mx-auto my-5">
                     	<input name="band_admin" type="hidden" th:value="${session.Member_Id}"/>
-                    	<input name="bandUrl" type="hidden" th:value="${updateMyBand.getBand_code()}" />
+                    	<input id="bandUrl" name="bandUrl" type="hidden" th:value="${updateMyBand.getBand_code()}" />
                         <p class="h4 text-center">밴드 정보 수정</p>
                         <input name="band_thumnail" class="form-control" type="file" id="formFileMultiple"  onchange="readURL(this);" multiple th:value="${updateMyBand.getBand_thumnail()}">
 						<img id="blah" th:src="@{'../img/uploadBandThumnail/'+${updateMyBand.getBand_thumnail()}}" alt="#" class="border my-3 mx-auto d-block " width="200" height="200"/>
@@ -32,7 +32,7 @@
                         <div class="row">
                         	<div class="col-5 mx-auto">
                         		<input type="button" value="밴드 수정" onclick="return func_updateBand()" class="btn btn-main w-100 p-3 rounded-pill mt-5"/>
-                        <input type="button" value="밴드 삭제" onclick="return func_deleteBand()" class="btn btn-main w-100 p-3 rounded-pill mt-3"/>	
+                        		<input type="button" value="밴드 삭제" onclick="return func_deleteBand()" class="btn btn-main w-100 p-3 rounded-pill mt-3"/>	
                         	</div>
                         </div>
                         
@@ -91,9 +91,16 @@
     	
 	    /* 밴드 삭제하기 */
 	    function func_deleteBand() {
-		 	   
-		 	  
-		 	document.getElementById('form_bandUpdate').submit();
+	    	var bandUrl = $('#bandUrl').val();
+	    	
+		 	var result = confirm('밴드를 삭제하시겠습니까? \n삭제 후에는 복구가 불가능합니다.');
+		 	
+		 	if(result){
+		 		location.href='/deleteBand?bandUrl='+bandUrl ;
+		 		return false;
+		 	} else {
+		 		return false;
+		 	}
 
 		 }
     </script>
