--- a/src/main/resources/templates/thymeleaf/map/map.html
+++ b/src/main/resources/templates/thymeleaf/map/map.html
@@ -62,6 +62,10 @@
 
                 <!-- 지역별 피드 출력 영역 -->
                 
+                <!-- trip 위치 출력 페이지  -->
+                
+                
+                
             </div> <!-- map_guide -->
 
             <div class="map_mapSection">
@@ -84,6 +88,10 @@
         
         // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
         var map = new kakao.maps.Map(mapContainer, mapOption); 
+        
+        
+        // 
+        
     </script>
 </body>
 
